--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                                 <a href="/" class="waves-effect waves-light btn">Login</a>
                             </div>
                             <div class="input-field col s12 m6">
-                                <a href="resgister.html" class="waves-effect waves-light btn">Sign up</a>
+                                <a href="src/resgister.html" class="waves-effect waves-light btn">Sign up</a>
                             </div>
                         </div>
                         <div class="input-field col s12 m12">
-                            <a href="resetPassword.html" class="login__container--text">Forgot password?</a>
+                            <a href="src/resetPassword.html" class="login__container--text">Forgot password?</a>
                         </div>                        
                     </div>
                 </form>
