--- a/src/resgister.html
+++ b/src/resgister.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -65,7 +65,7 @@
                                 <p class="login__container--text">Already have an account?</p>
                             </div>
                             <div class="input-field col s12 m6">
-                                <a href="index.html" class="waves-effect waves-light btn">Login</a>
+                                <a href="../index.html" class="waves-effect waves-light btn">Login</a>
                             </div>
                         </div>              
                     </div>
